Usage of valueOf is better